--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,17 @@ language: python
 python:
   - "2.7.15"
   - "3.6"
+  - "3.7"
+virtualenv:
+  system_site_packages: false
+
 # command to install dependencies
 before_install:
   - python setup.py sdist
 install:
   - pip install -r requirements.txt
   - pip install ./dist/*
+  
 # command to run tests
 script:
   - ./test.py
