--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 install:
   - pip install -r requirements.txt
   - pip install ./dist/*
-  
-# command to run tests
-script:
   - ./test.py
+
+# command to run tests
+#script:
