--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,6 @@ script:
 - pycodestyle ./SOLIDserverRest/*.py
 - python test.py
 - coverage run ./SOLIDserverRest/*.py
-- pytest --cov=./
-#- pytest --pyargs SOLIDserverRest
+- pytest --cov=./SOLIDserverRest test.py
 after_success:
   - codecov
