--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,6 @@ script:
 - python test.py
 - coverage run ./SOLIDserverRest/*.py
 - pytest --cov=./SOLIDserverRest test.py
-- pytest --cov=./SOLIDserverRest /tests/*.py
+- pytest --cov=./SOLIDserverRest tests/
 after_success:
   - codecov
