suppress coverage run

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ install:
 - pip install pytest-cov
 script:
 - pycodestyle ./SOLIDserverRest/*.py
-- python test.py
-- coverage run ./SOLIDserverRest/*.py
+# - python test.py
+# - coverage run ./SOLIDserverRest/*.py
 - TEST_SERVER=FAKE pytest --cov=./SOLIDserverRest tests
 after_success:
   - codecov
