--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,10 @@ install:
 - python setup.py sdist
 - pip install ./dist/*
 script:
+- find . -name '*.pyc' -exec rm -f {} \;
+- find . -name '*.egg-info' -exec rm -rf {} \;
+- find . -name '__pycache__' -exec rm -rf {} \;
+- find . -name '.pytest_cache' -exec rm -rf {} \;
 - pip freeze
 - ./tests/tests.py
 - pycodestyle ./SOLIDserverRest/*.py
