--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ before_install:
 - pip install codecov
 - pip install pytest-cov
 - pip install --upgrade  requests
+- pip install --upgrade  py
+- pip install --upgrade  six
 install:
 - python setup.py sdist
 - pip install ./dist/*
