--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,7 @@ cache: pip
 before_install:
 - pip install --upgrade pip
 - pip install -r requirements.txt
-- pip install pytest
-- pip install --upgrade pytest 
-- pip install pycodestyle
-- pip install codecov
-- pip install pytest-cov
+- pip install -r requirements-tests.txt
 - pip install --upgrade  requests
 - pip install --upgrade  py
 - pip install --upgrade  six
